--- a/css/navigation.css
+++ b/css/navigation.css
@@ -5,17 +5,29 @@
   bottom: 0;
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding: 10px 30px 5px 30px;
+  border-top: 1px solid #c1c1c1;
 }
 
 .tab-bar .tab-bar__tab{
   display: flex;
   align-items: center;
   flex-direction: column;
-  text-decoration: none;
+  text-decoration: none; /*아이콘 및 글 밑줄제거*/
+  color: #c1c1c1;
 }
 
 .tab-bar .tab-bar__tab i{
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  text-align: center;
+  font-size: 24px;
+}
+
+.tab-bar .tab-bar__title {
+  font-size: 10px;
+}
+
+.tab-bar .tab-bar__tab--selected{
+  color: #523737;
 }
