--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,8 @@
 @import 'reset.css';
 @import 'globals.css';
 @import 'header.css';
-@import 'navigation.css'
+@import 'navigation.css';
+@import 'search-bar.css';
+@import 'friends.css';
+@import 'chats.css';
+@import 'find.css';
