--- a/css/chats.css
+++ b/css/chats.css
@@ -49,10 +49,18 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   right: 20px;
   bottom: 70px;
   font-size: 20px;
   color: #523737;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: color 0.3s, background .3s, transform .5s ease-in-out;
+}
+
+.chat-btn:hover{
+  color: white;
+  background: #523737;
+  transform: rotateX(1turn);
 }
