--- a/css/navigation.css
+++ b/css/navigation.css
@@ -15,6 +15,11 @@
   flex-direction: column;
   text-decoration: none; /*아이콘 및 글 밑줄제거*/
   color: #c1c1c1;
+  transition: transform 0.2s linear;
+}
+
+.tab-bar .tab-bar__tab:hover{
+  transform: scale(1.1);
 }
 
 .tab-bar .tab-bar__tab i{
